# synthetic_graphs

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  TODO.md  generating.sh  nvcc_wrapper  prefetch.gph  run.py  sample_out.txt  sample_output.txt  saved_best_optimizer  saved_best_policy_model  saved_model_time  saved_prev_model_time  saved_prev_optimizer  saved_prev_policy_model  saved_prev_target_model  setup.py  simple_test.gph  start_benchmark.sh  test_profiling.gph  test_schedule.py  verify.py  viz.py
artifact/: independent_5000.gph  p5k.o4390274  submit_parla_1k.slm  submit_parla_scale.slm
artifact/dask_process_5k/: submit_dask_process_2.slm
artifact/dask_process_scale/: dpsc.o4390356
artifact/graphs/: independent_1000.gph  prefetch.gph
artifact/output/: p1k.o4390273
artifact/prefetch/: testing_prefetch.txt
artifact/scaling/: scaling_graphs.txt
artifact/scaling/scripts/: generating.sh  parser.py  parser_median.py  parsing.sh  profiling.sh  sort.py  testprofiling.sh  verifying.sh  viz.sh
artifact/scripts/: run_dask_process.py  run_dask_thread.py  run_dask_thread_gil.py  submit_parla_1k.slm  submit_parla_5k.slm  submit_parla_gil.slm  submit_parla_scale.slm  submit_parla_weak.slm
artifact/scripts/dask_process_1k/: dp1k.e4390190  dp1k.o4390190  submit_dask_process.slm
artifact/scripts/dask_process_1k/.mypy_cache/3.9/: _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _socket.data.json  _socket.meta.json  _thread.data.json  _thread.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  copyreg.data.json  copyreg.meta.json  enum.data.json  enum.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  pathlib.data.json  pathlib.meta.json  pickle.data.json  pickle.meta.json  (+32 more)
artifact/scripts/dask_process_1k/.mypy_cache/3.9/_typeshed/: __init__.data.json  __init__.meta.json
artifact/scripts/dask_process_1k/.mypy_cache/3.9/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
artifact/scripts/dask_process_1k/.mypy_cache/3.9/concurrent/: __init__.data.json  __init__.meta.json
artifact/scripts/dask_process_1k/.mypy_cache/3.9/concurrent/futures/: __init__.data.json  __init__.meta.json  _base.data.json  _base.meta.json  process.data.json  process.meta.json  thread.data.json  thread.meta.json
artifact/scripts/dask_process_1k/.mypy_cache/3.9/ctypes/: __init__.data.json  __init__.meta.json
artifact/scripts/dask_process_1k/.mypy_cache/3.9/email/: __init__.data.json  __init__.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
artifact/scripts/dask_process_1k/.mypy_cache/3.9/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json
artifact/scripts/dask_process_1k/.mypy_cache/3.9/importlib/metadata/: __init__.data.json  __init__.meta.json
artifact/scripts/dask_process_1k/.mypy_cache/3.9/logging/: __init__.data.json  __init__.meta.json
artifact/scripts/dask_process_1k/.mypy_cache/3.9/multiprocessing/: __init__.data.json  __init__.meta.json  connection.data.json  connection.meta.json  context.data.json  context.meta.json  managers.data.json  managers.meta.json  pool.data.json  pool.meta.json  process.data.json  process.meta.json  queues.data.json  queues.meta.json  reduction.data.json  reduction.meta.json  shared_memory.data.json  shared_memory.meta.json  sharedctypes.data.json  sharedctypes.meta.json  spawn.data.json  spawn.meta.json  synchronize.data.json  synchronize.meta.json
artifact/scripts/dask_process_1k/.mypy_cache/3.9/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
artifact/scripts/dask_process_5k/: dask_process.py  dp5k.e4390191  dp5k.o4390191
artifact/scripts/dask_process_scale/: submit_dask_process.slm
artifact/scripts/dask_process_weak/: dpw.e4390307  dpw.o4390307  submit_dask_process.slm
artifact/scripts/dask_thread_1k/: dt1k.e4390188  dt1k.o4390188  submit_dask_thread.slm
artifact/scripts/dask_thread_5k/: dask_thread.py  dt5k.o4390178  submit_dask_thread_2.slm
artifact/scripts/dask_thread_gil/: dask_thread.py  dg2.e4392858  dg2.e4392873  dg2.o4392858  dg2.o4392873  submit_dask_gil.slm
artifact/scripts/dask_thread_scale/: dtsc.o4390343  submit_dask_thread.slm
artifact/scripts/dask_thread_weak/: dtw.o4390304  submit_dask_thread.slm  test.sh
graphs/: generate_1D_stencil_graph.py  generate_independent_graph.py  generate_random_graph.py  generate_reduce_graph.py  generate_reduce_scatter_graph.py  generate_serial_graph.py  generate_tree_graph.py  sample.gph
sleep/: CMakeLists.txt  core.pxd  core.pyx  sleep.cu  sleep.h
sleep/impl/: CMakeLists.txt  sleep.cu
sleep/impl/include/: sleep.h
sleep_src/: CMakeLists.txt  core.pyx
sleep_src/impl/: CMakeLists.txt  sleep.cu
sleep_src/impl/include/: sleep.h
src/sleep/: CMakeLists.txt  core.pxd  core.pyx
src/sleep.egg-info/: PKG-INFO  SOURCES.txt
src/sleep/impl/: CMakeLists.txt  sleep.cpp  sleep.cu
src/sleep/impl/include/: sleep.h
synthetic/: bandwidth.py  core.py
